# vhsify

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: dependabot.yml
.github/homebrew/: update_formula.py  vhsify.rb.tmpl
.github/workflows/: release.yml
fixtures/images/: sample.avif
scripts/: clean_samples.sh  generate_samples.sh  generate_videos.sh  release.sh
src/: audio.rs  exif.rs  image.rs  main.rs  utils.rs  video.rs
