[package]
name = "vhsify"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
image = { version = "0.25.10", features = ["avif", "avif-native"] }
kamadak-exif = "0.6.1"
ntsc-rs = { git = "https://github.com/ntsc-rs/ntsc-rs" }
rayon = "1.11.0"
hound = "3.5.1"
clap = { version = "4", features = ["derive"] }
